# zarrmony-phenix

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/agents/: domain.md  triage-labels.md
src/zarrmony_phenix/: __init__.py  adapter.py  match.py
tests/: conftest.py  test_adapter.py  test_match.py  test_plate_layout.py
