[project]
name = "zarrmony-phenix"
version = "0.2.0"
description = "Opera Phenix reader plugin for zarrmony — wraps pyphenix.OperaPhenixReader."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Max Ferrin", email = "ferrin@calicolabs.com" }]
dependencies = [
    "zarrmony>=0.3.0",
    "pyphenix>=0.3.3",
    "dask>=2026.3.0",
    "numpy>=2",
    "xarray>=2025.9.0",
]

[project.entry-points."zarrmony.readers"]
phenix = "zarrmony_phenix:plugin"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=7",
    "ruff>=0.14",
    "tifffile>=2024.0",
]

[project.urls]
Homepage = "https://github.com/ferrinm/zarrmony-phenix"
Issues = "https://github.com/ferrinm/zarrmony-phenix/issues"
Changelog = "https://github.com/ferrinm/zarrmony-phenix/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zarrmony_phenix"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra"]
